syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Sum{
    int32 number_1 = 1;
    int32 number_2 = 2;
}

message SumRequest{
    Sum sum = 1;
}

message SumResponse{
    int32 result = 1;
}

message AverageNumber{
    int32 number = 1;
}

message AverageRequest{
    AverageNumber number = 1;
}

message AverageResponse{
    double result = 1;
}

message FindMaximumRequest{
    int32 number = 1;
}

message FindMaximumResponse{
    int32 maximum = 1;
}

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}
service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc AverageNumber(stream AverageRequest) returns (AverageResponse){};
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse){};

    //error handling
    //will throw an exception if sent number is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}